# AutoRun

./: AutoRun.rc  CMakeLists.txt  HEADER  README.md  autorun-logo.psd
include/: autorun_error.h  resource.h  systemtray.h  vkarray.h
src/: main.cpp  systemtray.c  vkarray.cpp
